# proyecto1

./: README.md  augmentation.py  notebook.ipynb  pyproject.toml
data/: test.csv  test_best.xlsx  train.csv
data/saved_models/: logistic_regression.joblib  naive_bayes.joblib  random_forest.joblib  splits.joblib  svm.joblib  tfidf_vectorizer.joblib
notebooks/: etapa1.ipynb  rework.ipynb
ui/: main.py  pyproject.toml
